--- a/stylesa/stylesa.css
+++ b/stylesa/stylesa.css
@@ -13,6 +13,9 @@
     max-width: 1140px;
     margin: 0 auto;
 }
+.section-gap{
+    margin-top: 60px;
+}
 .display-flex{
     display: flex;
 }
@@ -32,6 +35,13 @@
     gap: 60px;
 }
 .badge{
+    position: absolute;
+    top: -100px;
+    right: -90px;
     width: 286px;
     height: 286px;
+    filter: drop-shadow(-4px 10px 4px rgba(0, 0, 0, 0.25));
+}
+.image-container{
+    position: relative;
 }
