--- a/stylesa/stylesa.css
+++ b/stylesa/stylesa.css
@@ -3,6 +3,12 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+*{
+    margin: 0px;
+    padding: 0px;
+
+}
+
 .font-noto{
     font-family: "Noto Serif", serif;
 }
@@ -12,6 +18,9 @@
 .container{
     max-width: 1140px;
     margin: 0 auto;
+}
+.span-text{
+    color: #E95A08;
 }
 .section-gap{
     margin-top: 60px;
@@ -45,3 +54,141 @@
 .image-container{
     position: relative;
 }
+/* latest deals section */
+.deals-heading{
+    flex-direction: column;
+    align-items: center;
+}
+.deals-heading p{
+    text-align: center;
+}
+/* Card section */
+.card-container{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: repeat(2, 1fr);
+    gap: 28px;
+    margin-top: 120px;
+   
+}
+   
+.card{
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    color: white;
+    gap: 16px;
+    border-radius: 22px;
+     
+}
+    
+
+.bloom{
+    background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url("../assets/deal-bloom.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    
+}
+.ana{
+    background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url("../assets/deal-ana.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+ 
+}
+.zabo{
+    background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url("../assets/deal-zabo.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    grid-column: 2/3;
+    grid-row: 1/3;
+    height: 100%;
+}
+
+.card span{
+    text-decoration: underline;
+}
+/* news letter section */
+.newsletter-section{
+   
+    height: 533px;
+    /* margin-top: 0 auto; */
+    background-image: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../assets/news-letter-bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
+   
+}
+.newsletter-section h2{
+    color: white;
+}
+.submission-box{
+    display: flex;
+    width: 70%;
+
+}
+.submission-box button{
+    background-color: #E95A08;
+    padding: 26px 50px;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+    border: none;
+}
+.submission-box input[type="email"]{
+    width: 100%;
+    padding: 8px 20px;
+}
+.submission-box input[type="email"]::placeholder{
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 576px) {
+    .flower-container{
+        flex-direction: column;
+            
+    }
+    .store{
+        width: 100%;
+    }
+    .badge{
+        display: none;
+    }
+    .heading{
+        font-size: 24px;
+
+    }
+    br{
+        display: none;
+    }
+    .flower-container{
+        gap: 18px;
+    }
+    .list-item{
+        margin-top: 16px;
+    }
+    .paragraph{
+        font-size: 14px;
+    }
+    .card-container{
+        grid-template-columns: repeat(1, 1fr);
+
+    }
+    .card{
+        height: 200px;
+    }
+    .zabo{
+        grid-column: auto;
+    }
+} 
